phase3/code/classes/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    NUMERROR
    TOKENERROR
    WHITESPACE

Grammar

Rule 0     S' -> program
Rule 1     program -> macros classes
Rule 2     macros -> macros macro
Rule 3     macros -> <empty>
Rule 4     macro -> reference
Rule 5     reference -> REFERENCE STRING
Rule 6     classes -> classes class
Rule 7     classes -> <empty>
Rule 8     class -> CLASS ID LCB symbol_decs RCB
Rule 9     symbol_decs -> symbol_decs symbol_dec
Rule 10    symbol_decs -> <empty>
Rule 11    symbol_dec -> var_dec
Rule 12    symbol_dec -> func_dec
Rule 13    var_dec -> var_type var_list SEMICOLON
Rule 14    var_type -> return_type
Rule 15    var_type -> lvalue1
Rule 16    var_type -> STATIC return_type
Rule 17    var_type -> STATIC lvalue1
Rule 18    return_type -> INT_TYPE
Rule 19    return_type -> REAL_TYPE
Rule 20    return_type -> BOOL_TYPE
Rule 21    return_type -> STRING_TYPE
Rule 22    var_list -> var_list COMMA var_list_item
Rule 23    var_list -> var_list_item
Rule 24    item1 -> ID ASSIGNMENT exp
Rule 25    var_list_item -> item1
Rule 26    var_list_item -> ID
Rule 27    func_dec -> var_type func_body
Rule 28    func_dec -> VOID func_body
Rule 29    func_dec -> STATIC VOID func_body
Rule 30    func_body -> ID LP formal_arguments RP block
Rule 31    formal_arguments -> formal_arguments_list
Rule 32    formal_arguments -> <empty>
Rule 33    formal_arguments_list -> formal_arguments_list COMMA formal_argument
Rule 34    formal_arguments_list -> formal_argument
Rule 35    formal_argument -> return_type ID
Rule 36    formal_argument -> lvalue1 ID
Rule 37    block -> LCB statements_list RCB
Rule 38    block -> statement
Rule 39    statements_list -> statements_list statement
Rule 40    statements_list -> <empty>
Rule 41    statement -> SEMICOLON
Rule 42    statement -> exp SEMICOLON
Rule 43    statement -> assignment
Rule 44    statement -> print
Rule 45    statement -> statement_var_dec
Rule 46    statement -> if
Rule 47    statement -> for
Rule 48    statement -> while
Rule 49    statement -> return
Rule 50    statement -> break
Rule 51    statement -> continue
Rule 52    assignment -> lvalue ASSIGNMENT exp SEMICOLON
Rule 53    lvalue -> lvalue1
Rule 54    lvalue -> lvalue2
Rule 55    lvalue2 -> ID DOT ID
Rule 56    lvalue1 -> ID
Rule 57    print -> PRINT LP STRING RP SEMICOLON
Rule 58    statement_var_dec -> return_type var_list SEMICOLON
Rule 59    statement_var_dec -> lvalue1 var_list SEMICOLON
Rule 60    if -> IF LP exp RP block elseif_blocks else_block
Rule 61    elseif_blocks -> elseifs
Rule 62    elseif_blocks -> <empty>
Rule 63    elseifs -> elseifs elseif
Rule 64    elseifs -> elseif
Rule 65    elseif -> ELSEIF LP exp RP block
Rule 66    else_block -> ELSE block
Rule 67    else_block -> <empty>
Rule 68    for -> FOR LP ID IN exp TO exp STEPS exp RP block
Rule 69    while -> WHILE LP exp RP block
Rule 70    return -> RETURN exp SEMICOLON
Rule 71    break -> BREAK SEMICOLON
Rule 72    continue -> CONTINUE SEMICOLON
Rule 73    exp -> INTEGER
Rule 74    exp -> REAL
Rule 75    exp -> TRUE
Rule 76    exp -> FALSE
Rule 77    exp -> STRING
Rule 78    exp -> lvalue
Rule 79    exp -> binary_operation
Rule 80    exp -> logical_operation
Rule 81    exp -> comparison_operation
Rule 82    exp -> bitwise_operation
Rule 83    exp -> unary_operation
Rule 84    exp -> LP exp RP
Rule 85    exp -> function_call
Rule 86    binary_operation -> exp ADDITION exp
Rule 87    binary_operation -> exp SUBTRACTION exp
Rule 88    binary_operation -> exp MULTIPLICATION exp
Rule 89    binary_operation -> exp DIVISION exp
Rule 90    binary_operation -> exp MODULO exp
Rule 91    binary_operation -> exp POWER exp
Rule 92    binary_operation -> exp SHIFT_LEFT exp
Rule 93    binary_operation -> exp SHIFT_RIGHT exp
Rule 94    logical_operation -> exp AND exp
Rule 95    logical_operation -> exp OR exp
Rule 96    comparison_operation -> exp LT exp
Rule 97    comparison_operation -> exp LE exp
Rule 98    comparison_operation -> exp GT exp
Rule 99    comparison_operation -> exp GE exp
Rule 100   comparison_operation -> exp EQ exp
Rule 101   comparison_operation -> exp NE exp
Rule 102   bitwise_operation -> exp BITWISE_AND exp
Rule 103   bitwise_operation -> exp BITWISE_OR exp
Rule 104   unary_operation -> SUBTRACTION exp
Rule 105   unary_operation -> NOT exp
Rule 106   unary_operation -> BITWISE_NOT exp
Rule 107   function_call -> lvalue2 function_call_body
Rule 108   function_call -> lvalue1 function_call_body
Rule 109   function_call_body -> LP actual_arguments RP
Rule 110   actual_arguments -> actual_arguments_list
Rule 111   actual_arguments -> <empty>
Rule 112   actual_arguments_list -> actual_arguments_list COMMA exp
Rule 113   actual_arguments_list -> exp

Terminals, with rules where they appear

ADDITION             : 86
AND                  : 94
ASSIGNMENT           : 24 52
BITWISE_AND          : 102
BITWISE_NOT          : 106
BITWISE_OR           : 103
BOOL_TYPE            : 20
BREAK                : 71
CLASS                : 8
COMMA                : 22 33 112
COMMENT              : 
CONTINUE             : 72
DIVISION             : 89
DOT                  : 55
ELSE                 : 66
ELSEIF               : 65
EQ                   : 100
FALSE                : 76
FOR                  : 68
GE                   : 99
GT                   : 98
ID                   : 8 24 26 30 35 36 55 55 56 68
IF                   : 60
IN                   : 68
INTEGER              : 73
INT_TYPE             : 18
LCB                  : 8 37
LE                   : 97
LP                   : 30 57 60 65 68 69 84 109
LT                   : 96
MODULO               : 90
MULTIPLICATION       : 88
NE                   : 101
NOT                  : 105
NUMERROR             : 
OR                   : 95
POWER                : 91
PRINT                : 57
RCB                  : 8 37
REAL                 : 74
REAL_TYPE            : 19
REFERENCE            : 5
RETURN               : 70
RP                   : 30 57 60 65 68 69 84 109
SEMICOLON            : 13 41 42 52 57 58 59 70 71 72
SHIFT_LEFT           : 92
SHIFT_RIGHT          : 93
STATIC               : 16 17 29
STEPS                : 68
STRING               : 5 57 77
STRING_TYPE          : 21
SUBTRACTION          : 87 104
TO                   : 68
TOKENERROR           : 
TRUE                 : 75
VOID                 : 28 29
WHILE                : 69
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

actual_arguments     : 109
actual_arguments_list : 110 112
assignment           : 43
binary_operation     : 79
bitwise_operation    : 82
block                : 30 60 65 66 68 69
break                : 50
class                : 6
classes              : 1 6
comparison_operation : 81
continue             : 51
else_block           : 60
elseif               : 63 64
elseif_blocks        : 60
elseifs              : 61 63
exp                  : 24 42 52 60 65 68 68 68 69 70 84 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 103 104 105 106 112 113
for                  : 47
formal_argument      : 33 34
formal_arguments     : 30
formal_arguments_list : 31 33
func_body            : 27 28 29
func_dec             : 12
function_call        : 85
function_call_body   : 107 108
if                   : 46
item1                : 25
logical_operation    : 80
lvalue               : 52 78
lvalue1              : 15 17 36 53 59 108
lvalue2              : 54 107
macro                : 2
macros               : 1 2
print                : 44
program              : 0
reference            : 4
return               : 49
return_type          : 14 16 35 58
statement            : 38 39
statement_var_dec    : 45
statements_list      : 37 39
symbol_dec           : 9
symbol_decs          : 8 9
unary_operation      : 83
var_dec              : 11
var_list             : 13 22 58 59
var_list_item        : 22 23
var_type             : 13 27
while                : 48

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . macros classes
    (2) macros -> . macros macro
    (3) macros -> .

    REFERENCE       reduce using rule 3 (macros -> .)
    CLASS           reduce using rule 3 (macros -> .)
    $end            reduce using rule 3 (macros -> .)

    program                        shift and go to state 1
    macros                         shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> macros . classes
    (2) macros -> macros . macro
    (6) classes -> . classes class
    (7) classes -> .
    (4) macro -> . reference
    (5) reference -> . REFERENCE STRING

    CLASS           reduce using rule 7 (classes -> .)
    $end            reduce using rule 7 (classes -> .)
    REFERENCE       shift and go to state 6

    classes                        shift and go to state 3
    macro                          shift and go to state 4
    reference                      shift and go to state 5

state 3

    (1) program -> macros classes .
    (6) classes -> classes . class
    (8) class -> . CLASS ID LCB symbol_decs RCB

    $end            reduce using rule 1 (program -> macros classes .)
    CLASS           shift and go to state 8

    class                          shift and go to state 7

state 4

    (2) macros -> macros macro .

    REFERENCE       reduce using rule 2 (macros -> macros macro .)
    CLASS           reduce using rule 2 (macros -> macros macro .)
    $end            reduce using rule 2 (macros -> macros macro .)


state 5

    (4) macro -> reference .

    REFERENCE       reduce using rule 4 (macro -> reference .)
    CLASS           reduce using rule 4 (macro -> reference .)
    $end            reduce using rule 4 (macro -> reference .)


state 6

    (5) reference -> REFERENCE . STRING

    STRING          shift and go to state 9


state 7

    (6) classes -> classes class .

    CLASS           reduce using rule 6 (classes -> classes class .)
    $end            reduce using rule 6 (classes -> classes class .)


state 8

    (8) class -> CLASS . ID LCB symbol_decs RCB

    ID              shift and go to state 10


state 9

    (5) reference -> REFERENCE STRING .

    REFERENCE       reduce using rule 5 (reference -> REFERENCE STRING .)
    CLASS           reduce using rule 5 (reference -> REFERENCE STRING .)
    $end            reduce using rule 5 (reference -> REFERENCE STRING .)


state 10

    (8) class -> CLASS ID . LCB symbol_decs RCB

    LCB             shift and go to state 11


state 11

    (8) class -> CLASS ID LCB . symbol_decs RCB
    (9) symbol_decs -> . symbol_decs symbol_dec
    (10) symbol_decs -> .

    RCB             reduce using rule 10 (symbol_decs -> .)
    VOID            reduce using rule 10 (symbol_decs -> .)
    STATIC          reduce using rule 10 (symbol_decs -> .)
    INT_TYPE        reduce using rule 10 (symbol_decs -> .)
    REAL_TYPE       reduce using rule 10 (symbol_decs -> .)
    BOOL_TYPE       reduce using rule 10 (symbol_decs -> .)
    STRING_TYPE     reduce using rule 10 (symbol_decs -> .)
    ID              reduce using rule 10 (symbol_decs -> .)

    symbol_decs                    shift and go to state 12

state 12

    (8) class -> CLASS ID LCB symbol_decs . RCB
    (9) symbol_decs -> symbol_decs . symbol_dec
    (11) symbol_dec -> . var_dec
    (12) symbol_dec -> . func_dec
    (13) var_dec -> . var_type var_list SEMICOLON
    (27) func_dec -> . var_type func_body
    (28) func_dec -> . VOID func_body
    (29) func_dec -> . STATIC VOID func_body
    (14) var_type -> . return_type
    (15) var_type -> . lvalue1
    (16) var_type -> . STATIC return_type
    (17) var_type -> . STATIC lvalue1
    (18) return_type -> . INT_TYPE
    (19) return_type -> . REAL_TYPE
    (20) return_type -> . BOOL_TYPE
    (21) return_type -> . STRING_TYPE
    (56) lvalue1 -> . ID

    RCB             shift and go to state 14
    VOID            shift and go to state 19
    STATIC          shift and go to state 20
    INT_TYPE        shift and go to state 23
    REAL_TYPE       shift and go to state 24
    BOOL_TYPE       shift and go to state 25
    STRING_TYPE     shift and go to state 26
    ID              shift and go to state 13

    symbol_dec                     shift and go to state 15
    var_dec                        shift and go to state 16
    func_dec                       shift and go to state 17
    var_type                       shift and go to state 18
    return_type                    shift and go to state 21
    lvalue1                        shift and go to state 22

state 13

    (56) lvalue1 -> ID .

    ID              reduce using rule 56 (lvalue1 -> ID .)


state 14

    (8) class -> CLASS ID LCB symbol_decs RCB .

    CLASS           reduce using rule 8 (class -> CLASS ID LCB symbol_decs RCB .)
    $end            reduce using rule 8 (class -> CLASS ID LCB symbol_decs RCB .)


state 15

    (9) symbol_decs -> symbol_decs symbol_dec .

    RCB             reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    VOID            reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    STATIC          reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    INT_TYPE        reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    REAL_TYPE       reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    BOOL_TYPE       reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    STRING_TYPE     reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    ID              reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)


state 16

    (11) symbol_dec -> var_dec .

    RCB             reduce using rule 11 (symbol_dec -> var_dec .)
    VOID            reduce using rule 11 (symbol_dec -> var_dec .)
    STATIC          reduce using rule 11 (symbol_dec -> var_dec .)
    INT_TYPE        reduce using rule 11 (symbol_dec -> var_dec .)
    REAL_TYPE       reduce using rule 11 (symbol_dec -> var_dec .)
    BOOL_TYPE       reduce using rule 11 (symbol_dec -> var_dec .)
    STRING_TYPE     reduce using rule 11 (symbol_dec -> var_dec .)
    ID              reduce using rule 11 (symbol_dec -> var_dec .)


state 17

    (12) symbol_dec -> func_dec .

    RCB             reduce using rule 12 (symbol_dec -> func_dec .)
    VOID            reduce using rule 12 (symbol_dec -> func_dec .)
    STATIC          reduce using rule 12 (symbol_dec -> func_dec .)
    INT_TYPE        reduce using rule 12 (symbol_dec -> func_dec .)
    REAL_TYPE       reduce using rule 12 (symbol_dec -> func_dec .)
    BOOL_TYPE       reduce using rule 12 (symbol_dec -> func_dec .)
    STRING_TYPE     reduce using rule 12 (symbol_dec -> func_dec .)
    ID              reduce using rule 12 (symbol_dec -> func_dec .)


state 18

    (13) var_dec -> var_type . var_list SEMICOLON
    (27) func_dec -> var_type . func_body
    (22) var_list -> . var_list COMMA var_list_item
    (23) var_list -> . var_list_item
    (30) func_body -> . ID LP formal_arguments RP block
    (25) var_list_item -> . item1
    (26) var_list_item -> . ID
    (24) item1 -> . ID ASSIGNMENT exp

    ID              shift and go to state 30

    var_list                       shift and go to state 27
    func_body                      shift and go to state 28
    var_list_item                  shift and go to state 29
    item1                          shift and go to state 31

state 19

    (28) func_dec -> VOID . func_body
    (30) func_body -> . ID LP formal_arguments RP block

    ID              shift and go to state 33

    func_body                      shift and go to state 32

state 20

    (29) func_dec -> STATIC . VOID func_body
    (16) var_type -> STATIC . return_type
    (17) var_type -> STATIC . lvalue1
    (18) return_type -> . INT_TYPE
    (19) return_type -> . REAL_TYPE
    (20) return_type -> . BOOL_TYPE
    (21) return_type -> . STRING_TYPE
    (56) lvalue1 -> . ID

    VOID            shift and go to state 34
    INT_TYPE        shift and go to state 23
    REAL_TYPE       shift and go to state 24
    BOOL_TYPE       shift and go to state 25
    STRING_TYPE     shift and go to state 26
    ID              shift and go to state 13

    return_type                    shift and go to state 35
    lvalue1                        shift and go to state 36

state 21

    (14) var_type -> return_type .

    ID              reduce using rule 14 (var_type -> return_type .)


state 22

    (15) var_type -> lvalue1 .

    ID              reduce using rule 15 (var_type -> lvalue1 .)


state 23

    (18) return_type -> INT_TYPE .

    ID              reduce using rule 18 (return_type -> INT_TYPE .)


state 24

    (19) return_type -> REAL_TYPE .

    ID              reduce using rule 19 (return_type -> REAL_TYPE .)


state 25

    (20) return_type -> BOOL_TYPE .

    ID              reduce using rule 20 (return_type -> BOOL_TYPE .)


state 26

    (21) return_type -> STRING_TYPE .

    ID              reduce using rule 21 (return_type -> STRING_TYPE .)


state 27

    (13) var_dec -> var_type var_list . SEMICOLON
    (22) var_list -> var_list . COMMA var_list_item

    SEMICOLON       shift and go to state 37
    COMMA           shift and go to state 38


state 28

    (27) func_dec -> var_type func_body .

    RCB             reduce using rule 27 (func_dec -> var_type func_body .)
    VOID            reduce using rule 27 (func_dec -> var_type func_body .)
    STATIC          reduce using rule 27 (func_dec -> var_type func_body .)
    INT_TYPE        reduce using rule 27 (func_dec -> var_type func_body .)
    REAL_TYPE       reduce using rule 27 (func_dec -> var_type func_body .)
    BOOL_TYPE       reduce using rule 27 (func_dec -> var_type func_body .)
    STRING_TYPE     reduce using rule 27 (func_dec -> var_type func_body .)
    ID              reduce using rule 27 (func_dec -> var_type func_body .)


state 29

    (23) var_list -> var_list_item .

    SEMICOLON       reduce using rule 23 (var_list -> var_list_item .)
    COMMA           reduce using rule 23 (var_list -> var_list_item .)


state 30

    (30) func_body -> ID . LP formal_arguments RP block
    (26) var_list_item -> ID .
    (24) item1 -> ID . ASSIGNMENT exp

    LP              shift and go to state 39
    SEMICOLON       reduce using rule 26 (var_list_item -> ID .)
    COMMA           reduce using rule 26 (var_list_item -> ID .)
    ASSIGNMENT      shift and go to state 40


state 31

    (25) var_list_item -> item1 .

    SEMICOLON       reduce using rule 25 (var_list_item -> item1 .)
    COMMA           reduce using rule 25 (var_list_item -> item1 .)


state 32

    (28) func_dec -> VOID func_body .

    RCB             reduce using rule 28 (func_dec -> VOID func_body .)
    VOID            reduce using rule 28 (func_dec -> VOID func_body .)
    STATIC          reduce using rule 28 (func_dec -> VOID func_body .)
    INT_TYPE        reduce using rule 28 (func_dec -> VOID func_body .)
    REAL_TYPE       reduce using rule 28 (func_dec -> VOID func_body .)
    BOOL_TYPE       reduce using rule 28 (func_dec -> VOID func_body .)
    STRING_TYPE     reduce using rule 28 (func_dec -> VOID func_body .)
    ID              reduce using rule 28 (func_dec -> VOID func_body .)


state 33

    (30) func_body -> ID . LP formal_arguments RP block

    LP              shift and go to state 39


state 34

    (29) func_dec -> STATIC VOID . func_body
    (30) func_body -> . ID LP formal_arguments RP block

    ID              shift and go to state 33

    func_body                      shift and go to state 41

state 35

    (16) var_type -> STATIC return_type .

    ID              reduce using rule 16 (var_type -> STATIC return_type .)


state 36

    (17) var_type -> STATIC lvalue1 .

    ID              reduce using rule 17 (var_type -> STATIC lvalue1 .)


state 37

    (13) var_dec -> var_type var_list SEMICOLON .

    RCB             reduce using rule 13 (var_dec -> var_type var_list SEMICOLON .)
    VOID            reduce using rule 13 (var_dec -> var_type var_list SEMICOLON .)
    STATIC          reduce using rule 13 (var_dec -> var_type var_list SEMICOLON .)
    INT_TYPE        reduce using rule 13 (var_dec -> var_type var_list SEMICOLON .)
    REAL_TYPE       reduce using rule 13 (var_dec -> var_type var_list SEMICOLON .)
    BOOL_TYPE       reduce using rule 13 (var_dec -> var_type var_list SEMICOLON .)
    STRING_TYPE     reduce using rule 13 (var_dec -> var_type var_list SEMICOLON .)
    ID              reduce using rule 13 (var_dec -> var_type var_list SEMICOLON .)


state 38

    (22) var_list -> var_list COMMA . var_list_item
    (25) var_list_item -> . item1
    (26) var_list_item -> . ID
    (24) item1 -> . ID ASSIGNMENT exp

    ID              shift and go to state 43

    var_list_item                  shift and go to state 42
    item1                          shift and go to state 31

state 39

    (30) func_body -> ID LP . formal_arguments RP block
    (31) formal_arguments -> . formal_arguments_list
    (32) formal_arguments -> .
    (33) formal_arguments_list -> . formal_arguments_list COMMA formal_argument
    (34) formal_arguments_list -> . formal_argument
    (35) formal_argument -> . return_type ID
    (36) formal_argument -> . lvalue1 ID
    (18) return_type -> . INT_TYPE
    (19) return_type -> . REAL_TYPE
    (20) return_type -> . BOOL_TYPE
    (21) return_type -> . STRING_TYPE
    (56) lvalue1 -> . ID

    RP              reduce using rule 32 (formal_arguments -> .)
    INT_TYPE        shift and go to state 23
    REAL_TYPE       shift and go to state 24
    BOOL_TYPE       shift and go to state 25
    STRING_TYPE     shift and go to state 26
    ID              shift and go to state 13

    formal_arguments               shift and go to state 44
    formal_arguments_list          shift and go to state 45
    formal_argument                shift and go to state 46
    return_type                    shift and go to state 47
    lvalue1                        shift and go to state 48

state 40

    (24) item1 -> ID ASSIGNMENT . exp
    (73) exp -> . INTEGER
    (74) exp -> . REAL
    (75) exp -> . TRUE
    (76) exp -> . FALSE
    (77) exp -> . STRING
    (78) exp -> . lvalue
    (79) exp -> . binary_operation
    (80) exp -> . logical_operation
    (81) exp -> . comparison_operation
    (82) exp -> . bitwise_operation
    (83) exp -> . unary_operation
    (84) exp -> . LP exp RP
    (85) exp -> . function_call
    (53) lvalue -> . lvalue1
    (54) lvalue -> . lvalue2
    (86) binary_operation -> . exp ADDITION exp
    (87) binary_operation -> . exp SUBTRACTION exp
    (88) binary_operation -> . exp MULTIPLICATION exp
    (89) binary_operation -> . exp DIVISION exp
    (90) binary_operation -> . exp MODULO exp
    (91) binary_operation -> . exp POWER exp
    (92) binary_operation -> . exp SHIFT_LEFT exp
    (93) binary_operation -> . exp SHIFT_RIGHT exp
    (94) logical_operation -> . exp AND exp
    (95) logical_operation -> . exp OR exp
    (96) comparison_operation -> . exp LT exp
    (97) comparison_operation -> . exp LE exp
    (98) comparison_operation -> . exp GT exp
    (99) comparison_operation -> . exp GE exp
    (100) comparison_operation -> . exp EQ exp
    (101) comparison_operation -> . exp NE exp
    (102) bitwise_operation -> . exp BITWISE_AND exp
    (103) bitwise_operation -> . exp BITWISE_OR exp
    (104) unary_operation -> . SUBTRACTION exp
    (105) unary_operation -> . NOT exp
    (106) unary_operation -> . BITWISE_NOT exp
    (107) function_call -> . lvalue2 function_call_body
    (108) function_call -> . lvalue1 function_call_body
    (56) lvalue1 -> . ID
    (55) lvalue2 -> . ID DOT ID

    INTEGER         shift and go to state 51
    REAL            shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    STRING          shift and go to state 55
    LP              shift and go to state 62
    SUBTRACTION     shift and go to state 66
    NOT             shift and go to state 67
    BITWISE_NOT     shift and go to state 68
    ID              shift and go to state 49

    exp                            shift and go to state 50
    lvalue                         shift and go to state 56
    binary_operation               shift and go to state 57
    logical_operation              shift and go to state 58
    comparison_operation           shift and go to state 59
    bitwise_operation              shift and go to state 60
    unary_operation                shift and go to state 61
    function_call                  shift and go to state 63
    lvalue1                        shift and go to state 64
    lvalue2                        shift and go to state 65

state 41

    (29) func_dec -> STATIC VOID func_body .

    RCB             reduce using rule 29 (func_dec -> STATIC VOID func_body .)
    VOID            reduce using rule 29 (func_dec -> STATIC VOID func_body .)
    STATIC          reduce using rule 29 (func_dec -> STATIC VOID func_body .)
    INT_TYPE        reduce using rule 29 (func_dec -> STATIC VOID func_body .)
    REAL_TYPE       reduce using rule 29 (func_dec -> STATIC VOID func_body .)
    BOOL_TYPE       reduce using rule 29 (func_dec -> STATIC VOID func_body .)
    STRING_TYPE     reduce using rule 29 (func_dec -> STATIC VOID func_body .)
    ID              reduce using rule 29 (func_dec -> STATIC VOID func_body .)


state 42

    (22) var_list -> var_list COMMA var_list_item .

    SEMICOLON       reduce using rule 22 (var_list -> var_list COMMA var_list_item .)
    COMMA           reduce using rule 22 (var_list -> var_list COMMA var_list_item .)


state 43

    (26) var_list_item -> ID .
    (24) item1 -> ID . ASSIGNMENT exp

    SEMICOLON       reduce using rule 26 (var_list_item -> ID .)
    COMMA           reduce using rule 26 (var_list_item -> ID .)
    ASSIGNMENT      shift and go to state 40


state 44

    (30) func_body -> ID LP formal_arguments . RP block

    RP              shift and go to state 69


state 45

    (31) formal_arguments -> formal_arguments_list .
    (33) formal_arguments_list -> formal_arguments_list . COMMA formal_argument

    RP              reduce using rule 31 (formal_arguments -> formal_arguments_list .)
    COMMA           shift and go to state 70


state 46

    (34) formal_arguments_list -> formal_argument .

    COMMA           reduce using rule 34 (formal_arguments_list -> formal_argument .)
    RP              reduce using rule 34 (formal_arguments_list -> formal_argument .)


state 47

    (35) formal_argument -> return_type . ID

    ID              shift and go to state 71


state 48

    (36) formal_argument -> lvalue1 . ID

    ID              shift and go to state 72


state 49

    (56) lvalue1 -> ID .
    (55) lvalue2 -> ID . DOT ID

    LP              reduce using rule 56 (lvalue1 -> ID .)
    ADDITION        reduce using rule 56 (lvalue1 -> ID .)
    SUBTRACTION     reduce using rule 56 (lvalue1 -> ID .)
    MULTIPLICATION  reduce using rule 56 (lvalue1 -> ID .)
    DIVISION        reduce using rule 56 (lvalue1 -> ID .)
    MODULO          reduce using rule 56 (lvalue1 -> ID .)
    POWER           reduce using rule 56 (lvalue1 -> ID .)
    SHIFT_LEFT      reduce using rule 56 (lvalue1 -> ID .)
    SHIFT_RIGHT     reduce using rule 56 (lvalue1 -> ID .)
    AND             reduce using rule 56 (lvalue1 -> ID .)
    OR              reduce using rule 56 (lvalue1 -> ID .)
    LT              reduce using rule 56 (lvalue1 -> ID .)
    LE              reduce using rule 56 (lvalue1 -> ID .)
    GT              reduce using rule 56 (lvalue1 -> ID .)
    GE              reduce using rule 56 (lvalue1 -> ID .)
    EQ              reduce using rule 56 (lvalue1 -> ID .)
    NE              reduce using rule 56 (lvalue1 -> ID .)
    BITWISE_AND     reduce using rule 56 (lvalue1 -> ID .)
    BITWISE_OR      reduce using rule 56 (lvalue1 -> ID .)
    SEMICOLON       reduce using rule 56 (lvalue1 -> ID .)
    COMMA           reduce using rule 56 (lvalue1 -> ID .)
    RP              reduce using rule 56 (lvalue1 -> ID .)
    TO              reduce using rule 56 (lvalue1 -> ID .)
    STEPS           reduce using rule 56 (lvalue1 -> ID .)
    ID              reduce using rule 56 (lvalue1 -> ID .)
    ASSIGNMENT      reduce using rule 56 (lvalue1 -> ID .)
    DOT             shift and go to state 73


state 50

    (24) item1 -> ID ASSIGNMENT exp .
    (86) binary_operation -> exp . ADDITION exp
    (87) binary_operation -> exp . SUBTRACTION exp
    (88) binary_operation -> exp . MULTIPLICATION exp
    (89) binary_operation -> exp . DIVISION exp
    (90) binary_operation -> exp . MODULO exp
    (91) binary_operation -> exp . POWER exp
    (92) binary_operation -> exp . SHIFT_LEFT exp
    (93) binary_operation -> exp . SHIFT_RIGHT exp
    (94) logical_operation -> exp . AND exp
    (95) logical_operation -> exp . OR exp
    (96) comparison_operation -> exp . LT exp
    (97) comparison_operation -> exp . LE exp
    (98) comparison_operation -> exp . GT exp
    (99) comparison_operation -> exp . GE exp
    (100) comparison_operation -> exp . EQ exp
    (101) comparison_operation -> exp . NE exp
    (102) bitwise_operation -> exp . BITWISE_AND exp
    (103) bitwise_operation -> exp . BITWISE_OR exp

    SEMICOLON       reduce using rule 24 (item1 -> ID ASSIGNMENT exp .)
    COMMA           reduce using rule 24 (item1 -> ID ASSIGNMENT exp .)
    ADDITION        shift and go to state 74
    SUBTRACTION     shift and go to state 75
    MULTIPLICATION  shift and go to state 76
    DIVISION        shift and go to state 77
    MODULO          shift and go to state 78
    POWER           shift and go to state 79
    SHIFT_LEFT      shift and go to state 80
    SHIFT_RIGHT     shift and go to state 81
    AND             shift and go to state 82
    OR              shift and go to state 83
    LT              shift and go to state 84
    LE              shift and go to state 85
    GT              shift and go to state 86
    GE              shift and go to state 87
    EQ              shift and go to state 88
    NE              shift and go to state 89
    BITWISE_AND     shift and go to state 90
    BITWISE_OR      shift and go to state 91


state 51

    (73) exp -> INTEGER .

    ADDITION        reduce using rule 73 (exp -> INTEGER .)
    SUBTRACTION     reduce using rule 73 (exp -> INTEGER .)
    MULTIPLICATION  reduce using rule 73 (exp -> INTEGER .)
    DIVISION        reduce using rule 73 (exp -> INTEGER .)
    MODULO          reduce using rule 73 (exp -> INTEGER .)
    POWER           reduce using rule 73 (exp -> INTEGER .)
    SHIFT_LEFT      reduce using rule 73 (exp -> INTEGER .)
    SHIFT_RIGHT     reduce using rule 73 (exp -> INTEGER .)
    AND             reduce using rule 73 (exp -> INTEGER .)
    OR              reduce using rule 73 (exp -> INTEGER .)
    LT              reduce using rule 73 (exp -> INTEGER .)
    LE              reduce using rule 73 (exp -> INTEGER .)
    GT              reduce using rule 73 (exp -> INTEGER .)
    GE              reduce using rule 73 (exp -> INTEGER .)
    EQ              reduce using rule 73 (exp -> INTEGER .)
    NE              reduce using rule 73 (exp -> INTEGER .)
    BITWISE_AND     reduce using rule 73 (exp -> INTEGER .)
    BITWISE_OR      reduce using rule 73 (exp -> INTEGER .)
    SEMICOLON       reduce using rule 73 (exp -> INTEGER .)
    COMMA           reduce using rule 73 (exp -> INTEGER .)
    RP              reduce using rule 73 (exp -> INTEGER .)
    TO              reduce using rule 73 (exp -> INTEGER .)
    STEPS           reduce using rule 73 (exp -> INTEGER .)


state 52

    (74) exp -> REAL .

    ADDITION        reduce using rule 74 (exp -> REAL .)
    SUBTRACTION     reduce using rule 74 (exp -> REAL .)
    MULTIPLICATION  reduce using rule 74 (exp -> REAL .)
    DIVISION        reduce using rule 74 (exp -> REAL .)
    MODULO          reduce using rule 74 (exp -> REAL .)
    POWER           reduce using rule 74 (exp -> REAL .)
    SHIFT_LEFT      reduce using rule 74 (exp -> REAL .)
    SHIFT_RIGHT     reduce using rule 74 (exp -> REAL .)
    AND             reduce using rule 74 (exp -> REAL .)
    OR              reduce using rule 74 (exp -> REAL .)
    LT              reduce using rule 74 (exp -> REAL .)
    LE              reduce using rule 74 (exp -> REAL .)
    GT              reduce using rule 74 (exp -> REAL .)
    GE              reduce using rule 74 (exp -> REAL .)
    EQ              reduce using rule 74 (exp -> REAL .)
    NE              reduce using rule 74 (exp -> REAL .)
    BITWISE_AND     reduce using rule 74 (exp -> REAL .)
    BITWISE_OR      reduce using rule 74 (exp -> REAL .)
    SEMICOLON       reduce using rule 74 (exp -> REAL .)
    COMMA           reduce using rule 74 (exp -> REAL .)
    RP              reduce using rule 74 (exp -> REAL .)
    TO              reduce using rule 74 (exp -> REAL .)
    STEPS           reduce using rule 74 (exp -> REAL .)


state 53

    (75) exp -> TRUE .
